[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menus/ControlsMenu.tscn" type="PackedScene" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 119.0
margin_top = 40.0
margin_right = 201.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 82.0
margin_bottom = 14.0
text = "Torn"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap" type="HSeparator" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 82.0
margin_bottom = 22.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 82.0
margin_bottom = 48.0
text = "New Game"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 82.0
margin_bottom = 74.0
text = "Continue"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 82.0
margin_bottom = 100.0
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 82.0
margin_bottom = 126.0
text = "Quit"

[node name="ControlsMenu" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
